created shopping cart modal - added thumbnail of product, product name, price, quatity - added delete btn svg for removing items from cart - added checkout button, although this does not do anything 	-still added hover just for aesthetics -added other hover selectors 	- plus and minus 	- add to cart btn 	- top cart 	- avatar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
         </nav>
         <div class="cart-avatar">
             <img class="cart-top" src="static/images/icon-cart.svg" alt="cart">
+            <div id="cartNo" class="cart-no"><p>1</p></div>
             <img class="avatar" src="static/images/image-avatar.png" alt="avatar">
+        </div>
+        <div id="cartContainer" class="cart-container">
+            <h3>Cart</h3>
+            <div class="break"></div>
+            <div id="cartItems" class="cart-items">
+                <h4>Your cart is empty.</h4>
+                <img class="cart-img" src="static/images/image-product-1-thumbnail.jpg" alt="product-thumb"></img>
+                <div class="cart-content">
+                    <p>Fall Limited Edition Sneakers $125.00 x <span id="itemTotal">1</span> <span id="priceTotal">$125.00</span></p>
+                    <img id="deleteBtn" class="delete-btn" src="static/images/icon-delete.svg" alt="delete-btn">
+                </div>
+            </div>
+            <button id="checkOut" class="checkout"><h3>Checkout</h3></button>
         </div>
         <div id="overlay" class="overlay"></div>
     </header>
