created js for updating cart - created increment and decrement counter 	- bug with decrement: it goes to -1 and then back to 0 when 	  clicking on minus button 	- added max and min values for adding to cart, but they are also 	  a little weird, but these two issues might be related - created cost count - created click eventlistener to the add to cart button 	- what to change innerhtml of button to change to 'update cart' 	  when cart is >= 1 - cart modal changes from 'cart is empty' to diplaying item, prices etc 	- need to do this in reverse i.e. when cart is back to zero, the 	  modal display 'cart is empty' again - need to add function where all items are removed from cart when bin   button is clicked

--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
         </nav>
         <div class="cart-avatar">
             <img class="cart-top" src="static/images/icon-cart.svg" alt="cart">
-            <div id="cartNo" class="cart-no"><p>1</p></div>
+            <div id="cartCount" class="cart-count"><p>0</p></div>
             <img class="avatar" src="static/images/image-avatar.png" alt="avatar">
         </div>
         <div id="cartContainer" class="cart-container">
             <h3>Cart</h3>
             <div class="break"></div>
             <div id="cartItems" class="cart-items">
-                <h4>Your cart is empty.</h4>
                 <img class="cart-img" src="static/images/image-product-1-thumbnail.jpg" alt="product-thumb"></img>
                 <div class="cart-content">
-                    <p>Fall Limited Edition Sneakers $125.00 x <span id="itemTotal">1</span> <span id="priceTotal">$125.00</span></p>
+                    <p>Fall Limited Edition Sneakers $125.00 x <span id="itemTotal">0</span> <span id="priceTotal">$0.00</span></p>
                     <img id="deleteBtn" class="delete-btn" src="static/images/icon-delete.svg" alt="delete-btn">
                 </div>
+                <button id="checkOut" class="checkout"><h3>Checkout</h3></button>
             </div>
-            <button id="checkOut" class="checkout"><h3>Checkout</h3></button>
+            <div id="cartEmpty" class="cart-empty">
+                <h4>Your cart is empty.</h4>
+            </div>
         </div>
         <div id="overlay" class="overlay"></div>
     </header>
@@ -82,15 +84,15 @@
             </div>
             <div class="cart-btns">
                 <button id="cart" class="cart">
-                    <span><img class="minus" src="static/images/icon-minus.svg" alt="minus"></span>
+                    <span><img id="minus" class="minus" src="static/images/icon-minus.svg" alt="minus"></span>
                     <span id="cartNum">0</span>
-                    <span><img class="plus" src="static/images/icon-plus.svg" alt="plus"></span>
+                    <span><img id="plus" class="plus" src="static/images/icon-plus.svg" alt="plus"></span>
                 </button>
                 <button id="addCartBtn" class="add-cart-btn">
                     <span>
                         <img class="cart-bottom" src="static/images/icon-cart.svg" alt="cart">
                     </span>
-                   <span><p>Add to cart</p></span> 
+                   <span><p id="updateBtn">Add to cart</p></span> 
                 </button>
             </div>
         </div>
