created js for cart - plus and minus units to carts work 	- max and min values added - units are added to top cart icon and cart modal appears when 'add to   cart' is clicked - 'add to cart' button is changed to 'update basket' 	- when cart is '0' button changes back to 'add to cart' 	- cart contents changes to 'cart is empty' - cart modal appears when top cart icon is clicked - cart contents update according to the unit numbers when 'add to   cart/update cart' is clicked - settimeout was added to cart modal when it appears after cart update   and when top cart icon is clicked
- currently working on styling of cart for mobile version

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
             </ul>
         </nav>
         <div class="cart-avatar">
-            <img class="cart-top" src="static/images/icon-cart.svg" alt="cart">
+            <img id="cartTop" class="cart-top" src="static/images/icon-cart.svg" alt="cart">
             <div id="cartCount" class="cart-count"><p>0</p></div>
             <img class="avatar" src="static/images/image-avatar.png" alt="avatar">
         </div>
-        <div id="cartContainer" class="cart-container">
+        <div id="cartContainer" class="cart-container ">
             <h3>Cart</h3>
             <div class="break"></div>
             <div id="cartItems" class="cart-items">
                 <img class="cart-img" src="static/images/image-product-1-thumbnail.jpg" alt="product-thumb"></img>
                 <div class="cart-content">
                     <p>Fall Limited Edition Sneakers $125.00 x <span id="itemTotal">0</span> <span id="priceTotal">$0.00</span></p>
-                    <img id="deleteBtn" class="delete-btn" src="static/images/icon-delete.svg" alt="delete-btn">
+                    <span><img id="deleteBtn" class="delete-btn" src="static/images/icon-delete.svg" alt="delete-btn"></span>
                 </div>
                 <button id="checkOut" class="checkout"><h3>Checkout</h3></button>
             </div>
