--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             </ul>
         </nav>
         <div class="cart-avatar">
-            <img id="cartTop" class="cart-top" src="static/images/icon-cart.svg" alt="cart">
-            <div id="cartCount" class="cart-count"><p>0</p></div>
+            <div id="cartTop" class="cart-top" >
+                <img id="cartActive" class="cart-active" src="static/images/icon-cart.svg" alt="cart">
+                <div id="cartCount" class="cart-count"><p>0</p></div>
+            </div>
             <img class="avatar" src="static/images/image-avatar.png" alt="avatar">
         </div>
         <div id="cartContainer" class="cart-container ">
